several updates. Most important: switch to zuluFX instead of depending on external JFX-libraries.